--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -57,6 +57,7 @@
     </dependencies>
 
     <build>
+        <finalName>backend-app</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
